--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Chivo&family=Open+Sans&family=Roboto&family=Viga&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Chivo:100,300,400,500,700,900|Merriweather:100,300,400,500,700,900|Roboto:100,300,400,500,700,900");
 
 *{
     box-sizing: border-box;
@@ -6,13 +6,13 @@
 }
 
 body, html{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    font-family: "Roboto", "Chivo", "Helvetica", sans-serif;
     font-size: 15px;
     background-color: #0a0a0a;
     color: white;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    font-family: "Roboto", "Chivo", "Helvetica", sans-serif;
 }
 .bg-wrapper {
     z-index: 2;
@@ -40,10 +40,10 @@ body, html{
     z-index: 1;
     background-image: linear-gradient(170deg, rgba(10, 10, 10, 0.4) 0%, #0a0a0a 60%, #0a0a0a 100%);
 }
-.header-section{
+.section {
     z-index: 100;
 }
-.center-wrapper {
+#header .center-wrapper {
     display: flex;
     padding-top: 3em;
     padding-bottom: 3em;
@@ -51,18 +51,18 @@ body, html{
     align-items: center;
 }
 
-.header-section .center-wrapper{
+.section .center-wrapper{
     width: 90%;
     margin: auto;
 }
 
-.header-section .center-wrapper .left-side #logo-wrapper img{
+#header .center-wrapper .left-side #logo-wrapper img{
     height: auto;
     max-width: 25em;
     width: 100%;
 }
 
-.header-section .center-wrapper #nav-wrapper {
+#header .center-wrapper #nav-wrapper {
     display: flex;
     justify-content: space-between;
     max-width: 20em;
@@ -71,7 +71,7 @@ body, html{
     flex-shrink: 1;
 }
 
-.header-section .center-wrapper #nav-wrapper .nav-link {
+#header .center-wrapper #nav-wrapper .nav-link {
     font-family: "Chivo", "Roboto", "Helvetica", sans-serif;
     text-transform: uppercase;
     text-decoration: none;
@@ -81,43 +81,34 @@ body, html{
 }
 
 
-.header-section .center-wrapper #nav-wrapper .nav-link:hover {
+#header .center-wrapper #nav-wrapper .nav-link:hover {
     opacity: 1;
 }
 
 @media screen and (min-width: 0) and (max-width: 899px) {
-    .header-section .center-wrapper {
+    #header .center-wrapper {
         flex-direction: column;
         justify-content: center;
         align-items: center;
         padding-top: 3em;
         padding-bottom: 3em;
     }
-    .header-section .center-wrapper .left-side{
+    #header .center-wrapper .left-side{
         flex-grow: 1;
         flex-shrink: 1;
     }
-    .header-section .center-wrapper .left-side #logo-wrapper img{
+    #header .center-wrapper .left-side #logo-wrapper img{
         width: 100%;
         height: auto;
     }
 
-    .header-section .center-wrapper #nav-wrapper {
+    #header .center-wrapper #nav-wrapper {
         padding-top: 0.5em;
         max-width: 15em;
     }
-    .header-section .center-wrapper #nav-wrapper .nav-link{
+    #header .center-wrapper #nav-wrapper .nav-link{
         font-size: 0.8em;
     }
-}
-
-.content-wrapper {
-    z-index: 100;
-}
-
-.content-wrapper .center-wrapper {
-    width: 90%;
-    margin: auto;
 }
 
 .interactive-card-wrapper {
@@ -132,38 +123,51 @@ body, html{
     text-decoration: none;
     flex-grow: 0;
     flex-shrink: 0;
+    transition: all 0.2s;
 }
 
-@media screen and (min-width: 2090px) {
+
+@media screen and (min-width: 0) and (max-width: 619px) {
     .interactive-card-wrapper .card-item {
-        width: calc(20% - 16px);
+      width: 100%;
     }
-}
-
-
-@media screen and (min-width: 1470px) and (max-width: 2089px){
+  }
+  @media screen and (min-width: 620px) and (max-width: 999px) {
     .interactive-card-wrapper .card-item {
-        width: calc(25% - 15px);
+      width: calc(50% - 10px);
     }
-}
-
-@media screen and (min-width: 1000px) and (max-width: 1469px) {
+    .interactive-card-wrapper .card-item:nth-of-type(2n) {
+      margin-left: 20px;
+    }
+  }
+  @media screen and (min-width: 1000px) and (max-width: 1469px) {
     .interactive-card-wrapper .card-item {
-        width: calc(33.3333333333% - 13.3333333333px);
+      width: calc(33.3333333333% - 13.3333333333px);
     }
-}
-
-@media screen and (min-width: 620px) and (max-width: 999px){
+    .interactive-card-wrapper .card-item:nth-of-type(3n - 1), .interactive-card-wrapper .card-item:nth-of-type(3n) {
+      margin-left: 20px;
+    }
+  }
+  @media screen and (min-width: 1470px) and (max-width: 2089px) {
     .interactive-card-wrapper .card-item {
-        width: calc(50% - 10px);
-    }
-}
 
-@media screen and (min-width: 0) and (max-width: 619px){
-    .interactive-card-wrapper .card-item {
-        width: 100%;
+      width: calc(25% - 15px);
     }
-}
+    .interactive-card-wrapper .card-item:nth-of-type(4n - 2), .interactive-card-wrapper .card-item:nth-of-type(4n - 1), .interactive-card-wrapper .card-item:nth-of-type(4n) {
+      margin-left: 20px;
+    }
+  }
+  @media screen and (min-width: 2090px) {
+    .interactive-card-wrapper .card-item {
+      width: -webkit-calc(20% - 16px);
+      width: -moz-calc(20% - 16px);
+      width: calc(20% - 16px);
+    }
+    .interactive-card-wrapper .card-item:nth-of-type(5n - 3), .interactive-card-wrapper .card-item:nth-of-type(5n - 2), .interactive-card-wrapper .card-item:nth-of-type(5n - 1), .interactive-card-wrapper .card-item:nth-of-type(5n) {
+      margin-left: 20px;
+    }
+  }
+
 
 .interactive-card-wrapper .card-item .card-img {
     width: 100%;
@@ -175,7 +179,7 @@ body, html{
     background-size: cover;
     box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.5);
     background-color: #1e1e1e;
-    background-image: url(https://interactive.theguidon.com/2023/05/dead-end/thumbnail.png);
+    background-image: url(../html/img/corgear.jpg);
 }
 
 .interactive-card-wrapper .card-item .info{
@@ -198,4 +202,9 @@ body, html{
     overflow: hidden;
     text-overflow: ellipsis;
     color: white;
+}
+
+.interactive-card-wrapper .card-item:hover .text {
+    opacity: 1;
+    transition: all 0.2s;
 }
